--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ var x = setInterval(function() {
   // If the count down is over, write some text 
   if (distance < 0) {
     clearInterval(x);
-    document.getElementById("demo").innerHTML = "EXPIRED";
+    document.getElementById("demo").innerHTML = "THE FATE OF THE TABLE HAS BEEN SEALED";
   }
 }, 1000);
 </script>
